# inspektor

./: .gitignore  .travis.yml  README.md  com.github.hezral.inspektor  com.github.hezral.inspektor.yml  exiftool.json  exiftool.yml  file.avi.csv  file.avi.json  file.avi.txt  files.txt  meson.build  output.txt  post_install.py  setup.py  test.json  xihziluwtmp
.github/workflows/: main.yml
builddir/: build.ninja
builddir/meson-logs/: meson-log.txt
data/: application.css  com.github.hezral.inspektor.appdata.xml  com.github.hezral.inspektor.appdata.xml.in  com.github.hezral.inspektor.contract  com.github.hezral.inspektor.contract.in  com.github.hezral.inspektor.desktop  com.github.hezral.inspektor.desktop.in  com.github.hezral.inspektor.gschema.xml  com.github.hezral.inspektor.py  com.github.hezral.inspektor.xml  meson.build
debian/: changelog  control  copyright  install  postinst  rules
inspektor/: about.py  application.py  constants.py  main.py  mainwindow.py  menupopover.py  parser.py  popover.py  resize.py  revealer.py  sizegroup.py  textview.py  window.py  writer.py
po/: POTFILES  meson.build
sample/: Spring - Blender Open Movie.mp4_metadata.json
src/: about.py  base_view.py  constants.py  drop_view.py  extended_view.py  file_inspeck.py  inspektor.in  main.py  meson.build  mode_switch.py  parser copy.py  parser.py  playaudio.py  playvideo.py  preview_backend.py  utils.py  waveform.py  window copy.py  window.py
